--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "xmpp-ftw": "1.x"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "coveralls": "^2.11.2",
+    "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-mocha-cli": "~1.4.0",
-    "mocha": "~1.8.1",
+    "grunt-mocha-istanbul": "^2.2.0",
+    "istanbul": "^0.3.5",
+    "mocha": "^2.0.1",
     "should": "~1.2.2",
     "xmpp-ftw": "1.x"
   },
